# gb-forever

./: .gitignore  Cargo.toml
migrations/: 20250205180549_init_db.sql  20250205220453_playlist_table.sql  20250205224432_active_entry.sql
src/: config.rs  db.rs  downloader.rs  ffmpeg.rs  ia.rs  lib.rs  main.rs  stream.rs
