[package]
name = "gb-forever"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = "1.1.9"
color-eyre = "0.6.3"
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
