[package]
name = "gb-forever"
version = "0.1.0"
edition = "2021"
default-run = "gb-forever"

[dependencies]
async-stream = "0.3.6"
camino = { version = "1.1.9", features = ["serde1"] }
color-eyre = "0.6.3"
config = { version = "0.15.7", default-features = false, features = [
    "convert-case",
    "yaml",
] }
dotenvy = "0.15.7"
futures = "0.3.31"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "time"] }
time = { version = "0.3.37", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
